--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build.loader.js";
+      var loaderUrl = buildUrl + "/CS_M04_PR01_Noisy_Tweeters.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Build.data",
-        frameworkUrl: buildUrl + "/Build.framework.js",
-        codeUrl: buildUrl + "/Build.wasm",
+        dataUrl: buildUrl + "/CS_M04_PR01_Noisy_Tweeters.data",
+        frameworkUrl: buildUrl + "/CS_M04_PR01_Noisy_Tweeters.framework.js",
+        codeUrl: buildUrl + "/CS_M04_PR01_Noisy_Tweeters.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "M04_DV01",
